--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
 #Canister {
+
 width:400px;
 height:600px;
 background-image:url("image.jpg");
 background-size:cover;
-margin-left:auto;
-margin-right:auto;
 border:2px solid black;
 padding: 20px;
 padding-right: 50px;
 box-shadow: -60px 60px 20px rgba(0, 0, 0, 0.3);
+position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 h1{
   color:orange;
@@ -24,4 +27,7 @@ body
   background-image:url("background.svg");
   background-size:cover;
   background-repeat: no-repeat;
+}
+html {
+min-height: 100%;
 }
